--- a/src/main/resources/templates/editLocation.html
+++ b/src/main/resources/templates/editLocation.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Course Manager</title>
+    <title>Hero Sighting Manager</title>
 </head>
 <body>
 <!-- Main Body of Page -->
@@ -36,80 +36,38 @@
         </div>
     </div>
     <div class="row m-4 border border-dark">
-        <div class="col text-center m-3">
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Latitude</th>
-                    <th>Longitude</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Postcode</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="location : ${locations}">
-                    <td th:text="${location.latitude}">Location Latitude</td>
-                    <td th:text="${location.longitude}">Location Longitude</td>
-                    <td th:text="${location.name}">Location Name</td>
-                    <td th:text="${location.description}">Location Description</td>
-                    <td th:text="${location.postcode}">Location Postcode</td>
-                    <td><a href="#" th:href="@{/editLocation(latitude=${location.latitude}, longitude=${location.longitude})}">Edit</a></td>
-                    <td><a href="#" th:href="@{/deleteLocation(latitude=${location.latitude}, longitude=${location.longitude})}">Delete</a></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="row m-4 border border-dark">
         <div class="col-3 text-center m-3">
-            <span class="h3">Add Location</span>
+            <span class="h3">Edit Location</span>
         </div>
         <div class="col-7 text-center m-3">
-            <form action="addLocation" method="POST">
-                <div class="form-group row">
-                    <label for="latitude" class="col-3 col-form-label">
-                        Latitude</label>
-                    <div class="col-9">
-                        <input type="text" name="latitude"
-                               id="latitude" class="form-control"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="longitude" class="col-3 col-form-label">
-                        Longitude</label>
-                    <div class="col-9">
-                        <input type="text" name="longitude"
-                               id="longitude" class="form-control"/>
-                    </div>
-                </div>
+            <form action="editLocation" method="POST">
                 <div class="form-group row">
                     <label for="name" class="col-3 col-form-label">
                         Name</label>
                     <div class="col-9">
-                        <input type="text" name="name"
-                               id="name" class="form-control"/>
+                        <input type="text" name="name" id="name"
+                               class="form-control" th:value="${location.name}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="description" class="col-3 col-form-label">
                         Description</label>
                     <div class="col-9">
-                        <input type="text" name="description"
-                               id="description" class="form-control"/>
+                        <input type="text" name="description" id="description"
+                               class="form-control"  th:value="${location.description}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="postcode" class="col-3 col-form-label">
                         Postcode</label>
                     <div class="col-9">
-                        <input type="text" name="postcode"
-                               id="postcode" class="form-control"/>
+                        <input type="text" name="postcode" id="postcode"
+                               class="form-control"  th:value="${location.postcode}"/>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Add Location</button>
+                <input type="hidden" name="latitude" th:value="${location.latitude}"/>
+                <input type="hidden" name="longitude" th:value="${location.longitude}"/>
+                <button type="submit" class="btn btn-primary">Update location</button>
             </form>
         </div>
     </div>
