--- a/src/main/resources/templates/editSuperpower.html
+++ b/src/main/resources/templates/editSuperpower.html
@@ -12,11 +12,10 @@
 </head>
 <body>
 <!-- Main Body of Page -->
-
 <div class="container">
     <div class="row m-4">
         <div class="col text-center border border-dark">
-            <h1>Hero Sighting Manager</h1>
+            <h1><a href="/" class="text-dark">Hero Sighting Manager</a></h1>
         </div>
     </div>
     <div class="row m-4 border border-dark">
@@ -36,12 +35,26 @@
             <a href="Superpowers" class="btn btn-outline-primary btn-lg">Superpowers</a>
         </div>
     </div>
+    <div class="row m-4 border border-dark">
+        <div class="col-3 text-center m-3">
+            <span class="h3">Edit Superpower</span>
+        </div>
+        <div class="col-7 text-center m-3">
+            <form action="editSuperpower" method="POST">
+                <div class="form-group row">
+                    <label for="description" class="col-3 col-form-label">
+                        Description</label>
+                    <div class="col-9">
+                        <input type="text" name="description" id="description"
+                               class="form-control"  th:value="${superpower.description}"/>
+                    </div>
+                </div>
+                <input type="hidden" name="name" th:value="${superpower.name}"/>
+                <button type="submit" class="btn btn-primary">Update Sighting</button>
+            </form>
+        </div>
+    </div>
 </div>
-
-<!-- End main body -->
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
