--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,10 +12,11 @@
 </head>
 <body>
 <!-- Main Body of Page -->
+
 <div class="container">
     <div class="row m-4">
         <div class="col text-center border border-dark">
-            <h1><a href="/" class="text-dark">Hero Sighting Manager</a></h1>
+            <h1>Hero Sighting Manager</h1>
         </div>
     </div>
     <div class="row m-4 border border-dark">
@@ -35,56 +36,45 @@
             <a href="Superpowers" class="btn btn-outline-primary btn-lg">Superpowers</a>
         </div>
     </div>
-    <div class="row m-4 border border-dark">
-        <div class="col text-center m-3">
+    <div class="row m-4">
+        <div class="col border border-dark">
+            <p>This is the hero sighting manager, an application that allows for the inserting editing and deletion of
+            the current information about heroes and their sightings</p>
+        </div>
+    </div>
+    <div class="row m-4">
+        <div class="col border border-dark">
+            <h1>Recent Sitings</h1>
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Description</th>
+                    <th>SightingId</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
+                    <th>HeroId</th>
                     <th>Date</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
+                    <th>Location</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="superpower : ${superpowers}">
-                    <td th:text="${superpower.name}">Superpower Name</td>
-                    <td th:text="${superpower.description}">Superpower Description</td>
-                    <td><a href="#" th:href="@{/editSuperpower(name=${superpower.name})}">Edit</a></td>
-                    <td><a href="#" th:href="@{/deleteSuperpower(name=${superpower.name})}">Delete</a></td>
+                <tr th:each="sighting : ${sightings}">
+                    <td th:text="${sighting.sightingId}">Sighting ID</td>
+                    <td th:text="${sighting.latitude}">Sighting Latitude</td>
+                    <td th:text="${sighting.longitude}">Sighting Longitude</td>
+                    <td th:text="${sighting.heroId}">Sighting HeroId</td>
+                    <td th:text="${sighting.date}">SightingDate</td>
+                    <td><iframe th:src="@{https://maps.google.com/maps?q={latitude}, {longitude}&z=15&output=embed(latitude=${sighting.latitude},longitude=${sighting.longitude})}" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    <div class="row m-4 border border-dark">
-        <div class="col-3 text-center m-3">
-            <span class="h3">Add Superpower</span>
-        </div>
-        <div class="col-7 text-center m-3">
-            <form action="addSuperpower" method="POST">
-                <div class="form-group row">
-                    <label for="name" class="col-3 col-form-label">
-                        Name</label>
-                    <div class="col-9">
-                        <input type="text" name="name"
-                               id="name" class="form-control"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="description" class="col-3 col-form-label">
-                        Description</label>
-                    <div class="col-9">
-                        <input type="text" name="description"
-                               id="description" class="form-control"/>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Superpower</button>
-            </form>
-        </div>
-    </div>
 </div>
+
+<!-- End main body -->
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
